<resources>
    <string name="app_name">Smart Attendance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_database">Create Database</string>
    <string name="top_Image">Top Image</string>
    <string name="bottom_Image">Bottom Image</string>
    <string name="google_text">Sign Up With Google</string>
    <string name="email_text">Sign Up With Email</string>
    <string name="guest_text">Continue As a Guest</string>
    <string name="vector_Image">Vector Image</string>
    <string name="user_id">UserID</string>
    <string name="id">id</string>
    <string name="login_with_phone">Login with Phone number</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="your_web_client_id">296876539471-smulrqsgf5kl9rvho75o29io201budv8.apps.googleusercontent.com</string>
    <string name="signup_or_login">signup_or_login</string>
    <string name="forget_password">Forget password</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

</resources>