<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fdfdfd">
    <ImageView
        android:id="@+id/imageView0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/top_img"
        android:scaleType="fitXY"
        android:contentDescription="@string/top_Image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bottom_img"
        android:scaleType="fitXY"
        android:contentDescription="@string/bottom_Image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/imageView0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/imageView1">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/vector_Image"
            android:src="@drawable/vector"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/GoogleAccount"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/google_text"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/google_icon"
            android:paddingHorizontal="18dp"
            android:paddingVertical="10dp"
            android:elevation="4dp"/>
            <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email_text"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/email_icon"
            android:paddingHorizontal="18dp"
            android:paddingVertical="10dp"
            android:elevation="4dp"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/guest_text"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:visibility="gone"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/person_icon"
            android:paddingHorizontal="18dp"
            android:paddingVertical="10dp"
            android:elevation="4dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:hint="Email"
            android:visibility="gone"
            android:inputType="textEmailAddress"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="10dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/guest_text"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:hint="Password"
            android:visibility="gone"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:drawableStart="@drawable/password"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Forget password"
            android:visibility="gone"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:padding="10dp"
            android:textSize="16sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/Login_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:visibility="visible"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up"
            android:visibility="visible"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>